# blueair_api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  pytestPR.yaml  release.yml
docs/: mqtt.md  regions.md
src/blueair_api/: __init__.py  callbacks.py  const.py  device.py  device_aws.py  device_ir_aws.py  errors.py  http_aws_blueair.py  http_blueair.py  intermediate_representation_aws.py  ir_aws.py  model_enum.py  mqtt_aws_blueair.py  region_discovery.py  sku_map.py  stub.py  util.py  util_bootstrap.py  util_http.py
tests/: test_device_aws.py  test_device_ir_aws.py  test_http_aws_blueair_regions.py  test_intermediate_representation_aws.py  test_ir_aws.py  test_mqtt_aws_blueair.py  test_region_discovery.py
tests/device_info/: H35i.json  H35i.txt  H38i.json  H76I.json  H76i.json  README.txt  SP4i.json  T10i.json  T10i.txt  max_211i.json  max_311i.json  mini_restful.json  null.json  pet_air_pro.json  protect_7470i.json  protect_7470i_sensors.json  two_in_one.json  two_in_one_dh3i.json
