[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel",
    "aiohttp>=3.8.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "blueair_api"
version = "1.54.0"
authors = [
  { name="Brendan Dahl", email="dahl.brendan@gmail.com" },
]
description = "Blueair Api Wrapper"
readme = "README.md"
requires-python = ">=3.12.0, <4"
dependencies = [
    "aiohttp>=3.8.1",
    "paho-mqtt>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
]
keywords = [
    "hatch",
    "rest-mini",
    "api"
]

[project.urls]
"Homepage" = "https://github.com/dahlb/blueair_api"
"Bug Tracker" = "https://github.com/dahlb/blueair_api/issues"

[tool.pytest.ini_options]
# Surface latent NotImplemented / int(x or 0) / similar bugs while
# they are still deprecation warnings, before they become hard
# TypeErrors. bool(NotImplemented) is the canonical example:
# emitted DeprecationWarning since 3.9, raises TypeError on 3.14+.
# Treating DeprecationWarning as an error keeps the test suite
# honest across the 3.12 -> 3.14 transition.
filterwarnings = [
    "error::DeprecationWarning",
]
